* include/ruby/io.h (struct rb_io_buffer_t): PACKED_STRUCT should not   be used for platform-specific optimization. PACKED_STRUCT_UNALIGNED   should be used. [ruby-core:63988] [Bug #10088]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46925 b2dd03c8-39d4-4d8f-98ff-823fe69b080e